recursion.lessons.recursion.koch.Koch.scala.error
Koch:14: error: value ^ is not a member of Double
		avance(length/3^levels)
                               ^